updated repo url

--- a/views/index.html
+++ b/views/index.html
@@ -86,7 +86,7 @@
                     <div class="field is-grouped">
 
                     <p class="control">
-                        <a class="button is-" href="#">
+                        <a class="button is-" href="https://github.com/nunnally/athena">
 
                         <span>repositório do projeto</span>
                         </a>
