--- a/views/index.html
+++ b/views/index.html
@@ -122,7 +122,7 @@
                 <p>A plataforma <b>Athena</b> irá buscar pelas palavras-chave selecionadas em diversas fontes selecionadas. Após ter a busca efetuada, a plataforma irá realizar o ranqueamento das notícias, afim de de tentar estimar a relevância desta notícia. <br>Tendo as notícias selecionadas, é possível enviá-las para o banco de dados, assim será possível utilizar outros artefatos, como por exemplo o <i>clipping.</i>
                 </p> 
 <br>    
-<b-message title="Info" type="is-info" aria-close-label="Fechar mensagem">
+<b-message title="aviso importante" type="is-info" aria-close-label="Fechar mensagem">
         O sistema de ranqueamento apenas tenta obter os score através de uma caixa de palavras. O seu processo leva em conta a quantidade de vezes que uma palavra e seus sinônimos aparecem. Não há um processamento de linguagem natural ou algo do gênero.
 </b-message>
 <b-button class="bdbutton" @click="storeDatabase" type="is-warning" outlined>enviar notícias selecionados ao banco de dados</b-button> <br>    <br>
