--- a/views/index.html
+++ b/views/index.html
@@ -123,7 +123,7 @@
                 </p> 
 <br>    
 <b-message title="aviso importante" type="is-info" aria-close-label="Fechar mensagem">
-        O sistema de ranqueamento apenas tenta obter os score através de uma caixa de palavras. O seu processo leva em conta a quantidade de vezes que uma palavra e seus sinônimos aparecem. Não há um processamento de linguagem natural ou algo do gênero.
+        O sistema de ranqueamento apenas tenta obter os score através de uma caixa de palavras. O seu processo leva em conta a quantidade de vezes que uma palavra e seus sinônimos aparecem. Não há um processamento de linguagem natural ou algo do gênero, é <b><i>altamente recomendável</i></b> a leitura da notícia para um bom resultado de <i>clipping</i> e uma boa base de dados.
 </b-message>
 <b-button class="bdbutton" @click="storeDatabase" type="is-warning" outlined>enviar notícias selecionados ao banco de dados</b-button> <br>    <br>
 
@@ -156,7 +156,7 @@
                           </b-checkbox>
                           
                           <p class="content">
-                                  <b>palavras-chave selecionadas:</b>
+                                  <b>fontes selecionadas:</b>
                                   {{ checkboxGroup }}
                               </p>
                         </div>
