--- a/views/index.html
+++ b/views/index.html
@@ -246,7 +246,7 @@
                                     </b-table-column>
                                     <b-table-column field="vote_average" label="Score" numeric >
                                             <span class="tag" :class="type(8)">
-                                               8
+                                               7.67671
                                             </span>
                                         </b-table-column>
                                 </template>
@@ -272,6 +272,7 @@
     <!-- Full bundle | É possível colocar os componenetes individuais-->
     <script src="js/buefy.min.js"></script>
     <script src='https://unpkg.com/axios/dist/axios.min.js'></script>
+    <script src="https://cdnjs.com/libraries/intro.js"></script>
     <script src="js/app.js"></script>
 
 
