--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="css/buefy.min.css">
     <link rel="stylesheet" href="https://cdn.materialdesignicons.com/2.5.94/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intro.js/2.9.3/introjs.css">
+    
 
     <style>
 
@@ -40,8 +42,8 @@
 
 <body>
     <nav class="navbar is-black">
-            <div class="navbar-brand">
-                <a class="navbar-item" href="/">
+            <div  class="navbar-brand">
+                <a  class="navbar-item" href="/">
                 
                    ATHENA
                 
@@ -71,7 +73,7 @@
 
 
                     <hr class="navbar-divider">
-                    <a class="navbar-item" href="#">
+                    <a class="navbar-item" href="javascript:void(0);" onclick="javascript:introJs().start();">
                         tutorial
                     </a>
                     <a class="navbar-item is-active" href="/configuracoes">
@@ -96,11 +98,10 @@
                 </div>
             </div>
             </nav>
-
     <section class="hero is-primary is-bold">
         <div class="hero-body">
             <div class="container hero-body">
-            <p class="title">
+            <p  data-step="1" data-intro='Esta é a Plataforma Athena' class="title">
                 Athena
             </p>
             <p class="subtitle">
@@ -113,13 +114,14 @@
     
     <div id="app">
 
+
         <b-loading :is-full-page="isFullPage" :active.sync="isLoading" :can-cancel="false"></b-loading>
 
         <section class="section">
 
-            <div class="container">
+            <div  class="container">
                 <h1 class="title">busca & ranqueamento</h1>
-                <p>A plataforma <b>Athena</b> irá buscar pelas palavras-chave selecionadas em diversas fontes selecionadas. Após ter a busca efetuada, a plataforma irá realizar o ranqueamento das notícias, afim de de tentar estimar a relevância desta notícia. <br>Tendo as notícias selecionadas, é possível enviá-las para o banco de dados, assim será possível utilizar outros artefatos, como por exemplo o <i>clipping.</i>
+                <p data-step="2" data-intro='A principal função desta plataforma é.... Continua' >A plataforma <b>Athena</b> irá buscar pelas palavras-chave selecionadas em diversas fontes selecionadas. Após ter a busca efetuada, a plataforma irá realizar o ranqueamento das notícias, afim de de tentar estimar a relevância desta notícia. <br>Tendo as notícias selecionadas, é possível enviá-las para o banco de dados, assim será possível utilizar outros artefatos, como por exemplo o <i>clipping.</i>
                 </p> 
 <br>    
 <b-message title="aviso importante" type="is-info" aria-close-label="Fechar mensagem">
@@ -272,8 +274,9 @@
     <!-- Full bundle | É possível colocar os componenetes individuais-->
     <script src="js/buefy.min.js"></script>
     <script src='https://unpkg.com/axios/dist/axios.min.js'></script>
-    <script src="https://cdnjs.com/libraries/intro.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/intro.js/2.9.3/intro.js"></script>
     <script src="js/app.js"></script>
+
 
 
 </body>
