--- a/views/index.html
+++ b/views/index.html
@@ -121,7 +121,7 @@
 
             <div  class="container">
                 <h1 class="title">busca & ranqueamento</h1>
-                <p data-step="2" data-intro='A principal função desta plataforma é.... Continua' >A plataforma <b>Athena</b> irá buscar pelas palavras-chave selecionadas em diversas fontes selecionadas. Após ter a busca efetuada, a plataforma irá realizar o ranqueamento das notícias, afim de de tentar estimar a relevância desta notícia. <br>Tendo as notícias selecionadas, é possível enviá-las para o banco de dados, assim será possível utilizar outros artefatos, como por exemplo o <i>clipping.</i>
+                <p data-step="2" data-intro='Aqui uma breve descrição de plataforma, vamos entender tudinho !' >A plataforma <b>Athena</b> irá buscar pelas palavras-chave selecionadas em diversas fontes selecionadas. Após ter a busca efetuada, a plataforma irá realizar o ranqueamento das notícias, afim de de tentar estimar a relevância desta notícia. <br>Tendo as notícias selecionadas, é possível enviá-las para o banco de dados, assim será possível utilizar outros artefatos, como por exemplo o <i>clipping.</i>
                 </p> 
 <br>    
 <b-message title="aviso importante" type="is-info" aria-close-label="Fechar mensagem">
