--- a/views/index.html
+++ b/views/index.html
@@ -88,9 +88,9 @@
                     <div class="field is-grouped">
 
                     <p class="control">
-                        <a class="button is-" href="https://github.com/nunnally/athena">
+                        <a  href="https://github.com/nunnally/athena">
 
-                        <span>repositório do projeto</span>
+                            <i class="fab fa-github"></i>
                         </a>
                     </p>
                     </div>
